--- a/1.0.0-beta/18/Dockerfile
+++ b/1.0.0-beta/18/Dockerfile
@@ -4,7 +4,7 @@
 
 FROM erlang:24 AS builder
 
-ARG BONDY_TAG
+ARG BONDY_TAG=1.0.0-beta.18
 
 ENV BONDY_REPO=https://gitlab.com/leapsight/bondy.git
 
@@ -24,7 +24,7 @@ ENV PATH "$PATH:/root/.cache/rebar3/bin"
 
 # Download Bondy source and build release
 RUN mkdir -p /bondy-build/bondy && \
-    git clone --branch $BONDY_TAG  --single-branch --depth 1 $BONDY_REPO
+    git clone --depth 1 --single-branch --branch $BONDY_TAG $BONDY_REPO
 WORKDIR /bondy-build/bondy
 # This builds the release in /bondy-build/bondy/_build/prod/rel/bondy
 RUN rebar3 as prod release
